5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1760_1583.log
== TEST (2019-06-19 19:24:20) 
-- CODE:
v = input("Numero: ")

s = len(v)

i = 3

while i < s:
	v[i] = v[i]+"."
	
print(v)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:27:38) 
-- CODE:
v = input("Numero: ")

s = len(v)

i = 3

while i < s:
	v[i] = "."
	
print(v)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:31:38) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 3

while i < s:
	w = w + v[:i] + "."
	
print(w)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:31:53) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 3

while i < s:
	w = w + v[:i] + "."
	i = i + 3
print(w)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:32:00) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 3

while i < s:
	w = w + v[:i] + "."
	i = i + 3
print(w)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:32:17) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 3

while i < s:
	w = w + v[:i] + "."
	i = i + 
print(w)
-- ERROR:
File "XXXX", line 9
    i = i + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:32:21) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 3

while i < s:
	w = w + v[:i] + "."
	i = i + 1
print(w)
-- ERROR:
File "XXXX", line 9
    i = i + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:33:07) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 3
t = 3
while i < s:
	w = w + v[:i] + "."
	t = t + 3
print(w)
-- ERROR:
File "XXXX", line 9
    i = i + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:33:19) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 3
t = 3
while i < s:
	w = w + v[:i] + "."
	t = t + 3
print(w)
-- ERROR:
File "XXXX", line 9
    i = i + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:33:33) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 3
t = 3
while t < s:
	w = w + v[:i] + "."
	t = t + 3
print(w)
-- ERROR:
File "XXXX", line 9
    i = i + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:33:50) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 3
t = 3
while t < (s-1):
	w = w + v[:i] + "."
	t = t + 3
print(w)
-- ERROR:
File "XXXX", line 9
    i = i + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:34:06) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 3
t = 3
while t < s:
	w = w + v[:i] + "."
	t = t + 3
print(w)
-- ERROR:
File "XXXX", line 9
    i = i + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:34:27) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 3
t = 3
while t < s:
	w = w + v[:i] + "."
	t = t + 3
print(w[:-1])
-- ERROR:
File "XXXX", line 9
    i = i + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 19:34:33) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 3
t = 3
while t < s:
	w = w + v[:i] + "."
	t = t + 3
print(w[:-1])
-- EXECUTION TIME:
0.570762
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:

-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.123.123.123.123.123
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.987
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:34:40) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 3
t = 3
while t < s:
	w = w + v[:i] + "."
	t = t + 3
print(w[:-1])
-- ERROR:
File "XXXX", line 9
    i = i + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:34:45) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 3
t = 3
while t < s:
	w = w + v[:i] + "."
	t = t + 3
print(w[:-1])
-- ERROR:
File "XXXX", line 9
    i = i + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:34:49) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 3
t = 3
while t < s:
	w = w + v[:i] + "."
	t = t + 3
print(w[:-1])
-- ERROR:
File "XXXX", line 9
    i = i + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:34:54) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 3
t = 3
while t < s:
	w = w + v[:i] + "."
	t = t + 1
print(w[:-1])
-- ERROR:
File "XXXX", line 9
    i = i + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:35:01) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 3
t = 3
while t < s:
	w = w + v[:i] + "."
	t = t + 1
print(w[:-1])
-- ERROR:
File "XXXX", line 9
    i = i + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:35:24) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 3
t = 3
while t < s:
	w = w + v[:i] + "."
	i = i + 3
	t = t + 1
print(w[:-1])
-- ERROR:
File "XXXX", line 9
    i = i + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:35:47) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 3
t = 3
while t < s:
	w = w + v[:i*3] + "."
	i = i + 1
	t = t + 1
print(w[:-1])
-- ERROR:
File "XXXX", line 9
    i = i + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:36:20) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 0
t = 3
while t < s:
	w = w + v[i:i+3] + "."
	i = i + 1
	t = t + 1
print(w[:-1])
-- ERROR:
File "XXXX", line 9
    i = i + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 19:36:44) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 0
t = 3
while i < s:
	w = w + v[i:i+3] + "."
	i = i + 3
print(w[:-1])
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 19:36:51) 
-- CODE:
v = input("Numero: ")
w = ""
s = len(v)

i = 0
t = 3
while i < s:
	w = w + v[i:i+3] + "."
	i = i + 3
print(w[:-1])
-- EXECUTION TIME:
0.655605
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
